# gmod-module-examples

./: CMakeLists.txt  README.md
CallingCustomHook/: CMakeLists.txt  example.lua  gmod_hook.cpp
CallingLuaFunctions/: CMakeLists.txt  gmod_call.cpp
FunctionsCreating/: example.lua
FunctionsCreation/: CMakeLists.txt  gmod_functions.cpp
TableCreation/: CMakeLists.txt  example.lua  gmod_tables.cpp
Userdata/: CMakeLists.txt  example.lua  gmod_userdata.cpp
include/: CMakeLists.txt
